<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projects.dawid.movedetector.Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center">


        <ToggleButton
            android:id="@+id/SettingsEnableService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="200dp"
            android:text="New ToggleButton"
            android:onClick="serviceToggle"/>

        <Button
            android:id="@+id/ButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintSaveButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="saveSettings"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/SettingsEnableService"
            android:orientation="vertical">

            <EditText
                android:id="@+id/SettingsTelephoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="41dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintTelephone"
                android:inputType="phone"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="32dp"
                android:text="@string/hintSeekBar"
                android:textSize="19sp"/>

            <SeekBar
                android:id="@+id/SettingsSensitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/ModeSetting"
            android:layout_above="@id/ButtonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100sp"
            android:textOn="@string/SettingContinuousModeOn"
            android:textOff="@string/SettingContinuousModeOff"
            android:onClick="modeToggle"
            />


    </RelativeLayout>
</RelativeLayout>
